restructure the project/delete useless code and files

--- a/html/boutique.html
+++ b/html/boutique.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="../img/logo-as.png" />
 
     <!--javascript-->
-    <script defer src="../javascript/main.js"></script>
+    <script defer src="../javascript/boutique.js"></script>
     <!--css-->
     <link rel="stylesheet" href="../css/p-boutique.css" />
     <link rel="stylesheet" href="../css/base.css" />
@@ -91,16 +91,7 @@
 
     <ul>
       <li>
-        <i class="bx bxs-shopping-bag" id="cart-icon">panier</i>
-      </li>
-
-      <li>
-        <button
-          class="loginbtn main-point"
-          onclick="document.getElementById('login-form').style.display='block'"
-          style="width: auto">
-          <a class="maint-point">Se connecter</a>
-        </button>
+        <i class="bx bxs-shopping-bag" id="cart-icon" style="margin-right: 5vh"></i>
       </li>
     </ul>
 
