--- a/html/calendrier.html
+++ b/html/calendrier.html
@@ -88,33 +88,7 @@
         </ul>
       </nav>
     </header>
-    <img src="../img/coming-soon.png" style="width: 700px; display: flex; margin: 0 auto; margin-bottom: 100px" />
-
-    <!--last match-->
-    <section class="match-container">
-      <h1 class="titre">Derniers<span> Match</span></h1>
-
-      <!-- Match 1 -->
-      <div class="menu-container">
-        <div class="team-container">
-          <img src="../img/logo.png" alt="Equipe 1" />
-          <h2>As Montigny</h2>
-          <h4>P4</h4>
-        </div>
-
-        <div class="score-container">
-          <h3>MARDI 02 MAI - 20:15</h3>
-          <p>2 - 1</p>
-          <a href="https://www.rbfa.be/fr/club/8361/infos">Plus d'infos</a>
-        </div>
-
-        <div class="team-container">
-          <img src="../img/foot-logo-gilly.jpg" alt="Equipe 2" />
-          <h2>Gilly</h2>
-          <h4>P4</h4>
-        </div>
-      </div>
-    </section>
+    <img src="../img/coming-soon.jpg" style="width: 700px; display: flex; margin: 0 auto; margin-bottom: 100px" />
 
     <footer>
       <div class="logocontainer-footer">
