--- a/html/cotisation.html
+++ b/html/cotisation.html
@@ -184,7 +184,7 @@
         <!-- Card 3 -->
         <div class="card">
           <div class="header">
-            <span class="title">Pack de Mi-saison</span>
+            <span class="title">Pack Mi-saison</span>
             <hr class="title-underline">
             <span class="price">Dés 50€ <sup>(cas par cas)</sub></span>
           </div>
