--- a/html/equipes.html
+++ b/html/equipes.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -89,404 +89,35 @@
       </nav>
     </header>
     <main>
-      <div id="allteam"></div>
-        <p>
-          Nos équipes Lors de la saison 2023-24, l'AS Montigny a aligné les équipes suivantes: U6 U7 U8 a + U9 a + b + c U10 a
-          + b U11 a + b + c U12 filles + garçons U13 U14 U15 U16 a + b U19 Seniors a + b Vétérans (en amical) 23 équipes pour
-          plus de 345 joueurs et 53 membres de staff.
-        </p>
-
-        <h1 class="titre" id="jeunes">Les <span>jeunes</span></h1>
-
-        <p>
-          Les jeunes Le coeur du projet de l'AS Montigny, les jeunes sont l'avenir du club. C'est sur eux que le club mise pour
-          assurer le futur!
-        </p>
-
-        
-          <!-- ---------------------------------- -->
-          <div id="u6">
-            <div class="team">
-              <img class="team-photo" src="../img/kids5.jpg" alt="Équipe U6" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U6</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- ------------------------------------ -->
-
-          <div id="u7">
-            <div class="team">
-              <div class="align-right">
-                <h2 class="soustitre">Equipe<span> U7</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-
-              <img class="team-photo" src="../img/kids6.jpg" alt="Équipe U7" />
-            </div>
-          </div>
-
-          <!-- --------------------------------- -->
-
-          <div id="u9">
-            <div class="team">
-              <img class="team-photo" src="../img/kids9.jpg" alt="Équipe U9" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U9</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- ---------------------------------- -->
-          <div id="u11">
-            <div class="team">
-              <div class="align-right">
-                <h2 class="soustitre">Equipe<span> U11</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-              <img class="team-photo" src="../img/kids10.jpg" alt="Équipe U11" />
-            </div>
-          </div>
-
-          <!-- ------------------------- -->
-          <div id="u12">
-            <div class="team">
-              <img class="team-photo" src="../img/kids11.jpg" alt="Équipe U12" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U12</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!------------------- -->
-
-        <h1 class="titre" id="seniors">Les <span>séniors</span></h1>
-
-        <p>
-          Les seniors Une équipe première doit motiver les jeunes par l’exemple, créer une fierté communautaire, renforcer les
-          liens sociaux, développer des compétences et attirer des talents et des sponsors. Elle doit montrer la voie !
-        </p>
-
-        <!-- ------------------------------ -->
-
-          <div id="u13">
-            <div class="team">
-              <img class="team-photo" src="../img/u12-2019.jpg" alt="Équipe U13" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U13</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- ------------------------------------ -->
-
-          <div id="u14">
-            <div class="team">
-              <div class="align-right">
-                <h2 class="soustitre">Equipe<span> U14</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-
-              <img class="team-photo" src="../img/u14-2017.jpg" alt="Équipe U7" />
-            </div>
-          </div>
-
-          <!-- --------------------------------- -->
-
-          <div id="u15">
-            <div class="team">
-              <img class="team-photo" src="../img/kids10.jpg" alt="Équipe U9" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U15</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- ---------------------------------- -->
-          <div id="u16">
-            <div class="team">
-              <div class="align-right">
-                <h2 class="soustitre">Equipe<span> U16</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-              <img class="team-photo" src="../img/kids10.jpg" alt="Équipe U116" />
-            </div>
-          </div>
-
-          <!-- ------------------------- -->
-          <div id="u19">
-            <div class="team">
-              <img class="team-photo" src="../img/u192.jpg" alt="Équipe U19" />
-
-              <div class="team-info">
-                <h2 class="soustitre">Equipe<span> U19</span></h2>
-
-                <h2>Les entraînements</h2>
-
-                <ul>
-                  <li>Mardi de 19h à 20h30</li>
-                  <li>Jeudi de 19h à 20h30</li>
-                </ul>
-
-                <h2>Staff</h2>
-
-                <ul>
-                  <li>Abdi coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- ----------------- -->
-
-
-        <h1 class="titre" id="veteranf">Les <span>Vétérans</span></h1>
-
-        <p>
-          Les vétérans Une équipe vétérans offre aux plus de 35 ans une occasion de s'amuser, de rester en forme et de partager
-          leur expérience avec les plus jeunes.
-        </p>
-
-        <div id="p3">
-          <div class="team">
-            <img class="team-photo" src="../img/p3.jpg" alt="Équipe U6" />
-
-            <div class="team-info">
-              <h2 class="soustitre">Equipe<span> P3</span></h2>
-
-              <h2>Les entraînements</h2>
-
-              <ul>
-                <li>Mardi de 19h à 20h30</li>
-                <li>Jeudi de 19h à 20h30</li>
-              </ul>
-
-              <h2>Staff</h2>
-
-              <ul>
-                <li>Abdi coach</li>
-              </ul>
-            </div>
-          </div>
+      <section id="allteam">
+        <article>
+          <p>
+            Nos équipes Lors de la saison 2023-24, l'AS Montigny a aligné les équipes suivantes: U6 U7 U8 a + U9 a + b + c
+            U10 a + b U11 a + b + c U12 filles + garçons U13 U14 U15 U16 a + b U19 Seniors a + b Vétérans (en amical) 23
+            équipes pour plus de 345 joueurs et 53 membres de staff.
+          </p>
+        </article>
+        <div id="jeunes">
+          <h1 class="titre" id="jeunes">Les <span>jeunes</span></h1>
+          <p>
+            Les jeunes Le coeur du projet de l'AS Montigny, les jeunes sont l'avenir du club. C'est sur eux que le club mise
+            pour assurer le futur!
+          </p>
         </div>
+        <div id="seniors">
+          <h1 class="titre" id="seniors">Les <span>séniors</span></h1>
 
-        <div id="p4">
-          <div class="team">
-            <div class="align-right">
-              <h2 class="soustitre">Equipe<span> P4</span></h2>
-
-              <h2>Les entraînements</h2>
-
-              <ul>
-                <li>Mardi de 19h à 20h30</li>
-                <li>Jeudi de 19h à 20h30</li>
-              </ul>
-
-              <h2>Staff</h2>
-
-              <ul>
-                <li>Abdi coach</li>
-              </ul>
-            </div>
-
-            <img class="team-photo" src="../img/p4.jpg" alt="Équipe U7" />
-          </div>
+          <p>
+            Les seniors Une équipe première doit motiver les jeunes par l’exemple, créer une fierté communautaire, renforcer
+            les liens sociaux, développer des compétences et attirer des talents et des sponsors. Elle doit montrer la voie !
+          </p>
         </div>
-
-        <div id="senior">
-          <div class="team">
-            <img class="team-photo" src="../img/senior3.jpg" alt="Équipe U9" />
-
-            <div class="team-info">
-              <h2 class="soustitre">Equipe<span> Senior</span></h2>
-
-              <h2>Les entraînements</h2>
-
-              <ul>
-                <li>Mardi de 19h à 20h30</li>
-                <li>Jeudi de 19h à 20h30</li>
-              </ul>
-
-              <h2>Staff</h2>
-
-              <ul>
-                <li>Abdi coach</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <section class="coach-container">
-        <h1 class="titre">Nos <span>Coachs</span></h1>
-
-        <div class="wrapper">
-          <i id="left" class="fa-solid fa-angle-left"></i>
-
-          <ul class="carousel">
-            <li class="card">
-              <div class="img">
-                <img src="../img/mika1.jpg" alt="img" draggable="false" />
-              </div>
-              <h2>Mika Siciliano</h2>
-              <span>Coach u12</span>
-            </li>
-
-            <li class="card">
-              <div class="img">
-                <img src="../img/coach4.JPG" alt="img" draggable="false" />
-              </div>
-              <h2>Antonio concepcion</h2>
-              <span>Coach u19</span>
-            </li>
-
-            <li class="card">
-              <div class="img">
-                <img src="../img/coach5.JPG" alt="img" draggable="false" />
-              </div>
-              <h2>Lariach French</h2>
-              <span>Coach Technique</span>
-            </li>
-
-            <li class="card">
-              <div class="img">
-                <img src="../img/coach6.JPG" alt="img" draggable="false" />
-              </div>
-              <h2>James Khosravi</h2>
-              <span>Coach u8</span>
-            </li>
-
-            <li class="card">
-              <div class="img">
-                <img src="../img/coach7.JPG" alt="img" draggable="false" />
-              </div>
-              <h2>Langelez Gregoire</h2>
-              <span>Coach u19</span>
-            </li>
-
-            <li class="card">
-              <div class="img">
-                <img src="../img/coach3.jpg" alt="img" draggable="false" />
-              </div>
-              <h2>Donald Horton</h2>
-              <span>coach u11</span>
-            </li>
-          </ul>
-
-          <i id="right" class="fa-solid fa-angle-right"></i>
+        <div id="veterans">
+          <h1 class="titre" id="veterans">Les <span>Vétérans</span></h1>
+          <p>
+            Les vétérans Une équipe vétérans offre aux plus de 35 ans une occasion de s'amuser, de rester en forme et de
+            partager leur expérience avec les plus jeunes.
+          </p>
         </div>
       </section>
     </main>
