--- a/html/histoire.html
+++ b/html/histoire.html
@@ -92,7 +92,7 @@
 
     <h1 class="titre">L' histoire<span> du club</span></h1>
 
-    <div id="allstory">
+    <section id="allstory">
       <!-- ---------------------------------- -->
 
       <div class="story">
@@ -134,7 +134,7 @@
 
       <div id="u9">
         <div class="story">
-          <img class="story-photo" src="../img/old5.png" />
+          <img class="story-photo" src="../img/mascotte3.png" />
 
           <div class="story-info">
             <p>
@@ -186,8 +186,7 @@
           </div>
         </div>
       </div>
-      <!-- ----------------- -->
-    </div>
+    </section>
 
     <!-- ---------- -->
 
