--- a/html/planning.html
+++ b/html/planning.html
@@ -88,12 +88,95 @@
         </ul>
       </nav>
     </header>
-    <img src="../img/coming-soon.png" style="width: 700px; display: flex; margin: 0 auto; margin-bottom: 100px" />
+
+    <main>
+      <section id="planning">
+        <h1>Planning saison 2023/2024</h1>
+        <div class="img-container">
+          <img src="../img/planning.jpg" alt="Planning" />
+        </div>
+      </section>
+
+      <section id="organigramme">
+        <h1>Organigramme 2023/2024</h1>
+        <p class="inter-light">
+          L'AS Montigny a toujours voulu se démarquer par son bonne organisation. Nous nous mettons un point d'honneur à nous
+          organiser et à mettre à jour un organigramme au moins une fois par an. Voici celui en cours pour la saison 2024/25
+          :
+        </p>
+        <div class="img-container">
+          <img src="../img/organigramme.png" alt="Organigramme" />
+        </div>
+        <div class="img-container">
+          <img src="../img/organigramme2.png" alt="Organigramme" />
+        </div>
+
+        <section class="coach-container">
+          <h1 class="titre">Nos <span>Coachs</span></h1>
+
+          <div class="wrapper">
+            <i id="left" class="fa-solid fa-angle-left"></i>
+
+            <ul class="carousel">
+              <li class="card">
+                <div class="img">
+                  <img src="../img/mika1.jpg" alt="img" draggable="false" />
+                </div>
+                <h2>Mika Siciliano</h2>
+                <span>Coach u12</span>
+              </li>
+
+              <li class="card">
+                <div class="img">
+                  <img src="../img/coach4.JPG" alt="img" draggable="false" />
+                </div>
+                <h2>Antonio concepcion</h2>
+                <span>Coach u19</span>
+              </li>
+
+              <li class="card">
+                <div class="img">
+                  <img src="../img/coach5.JPG" alt="img" draggable="false" />
+                </div>
+                <h2>Lariach French</h2>
+                <span>Coach Technique</span>
+              </li>
+
+              <li class="card">
+                <div class="img">
+                  <img src="../img/coach6.JPG" alt="img" draggable="false" />
+                </div>
+                <h2>James Khosravi</h2>
+                <span>Coach u8</span>
+              </li>
+
+              <li class="card">
+                <div class="img">
+                  <img src="../img/coach7.JPG" alt="img" draggable="false" />
+                </div>
+                <h2>Langelez Gregoire</h2>
+                <span>Coach u19</span>
+              </li>
+
+              <li class="card">
+                <div class="img">
+                  <img src="../img/coach3.jpg" alt="img" draggable="false" />
+                </div>
+                <h2>Donald Horton</h2>
+                <span>coach u11</span>
+              </li>
+            </ul>
+
+            <i id="right" class="fa-solid fa-angle-right"></i>
+          </div>
+        </section>
+      </section>
+    </main>
 
     <footer>
       <div class="logocontainer-footer">
         <a href="../index.html">
-          <img src="../img/logo.png" id="logo-footer" alt="logo" />
+          <img src="../img/logo-as.png" id="logo-footer" alt="logo" />
         </a>
       </div>
 
