--- a/html/projets.html
+++ b/html/projets.html
@@ -197,6 +197,9 @@
       <!-- ---------------------------------- -->
     </div>
 
+    Le volontariat Pratiquement tout le staff fonctionne sous le régime du volontariat (communément appelé "bénévolat").
+    Envie de prêter mains fortes à notre organisation ? Plus d'informations sur le volontariat ? levolontariat.be inscriez
+    vous sur notre formulaire rejoignez le groupe les extras sur facebook
     <!----FOOTER---->
     <footer>
       <div class="logocontainer-footer">
