--- a/html/sponsors.html
+++ b/html/sponsors.html
@@ -89,7 +89,7 @@
       </nav>
     </header>
 
-    <img src="../img/coming-soon.png" style="width: 700px; display: flex; margin: 0 auto; margin-bottom: 100px" />
+    <img src="../img/coming-soon.jpg" style="width: 700px; display: flex; margin: 0 auto; margin-bottom: 100px" />
 
     <footer>
       <div class="logocontainer-footer">
