--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="img/logo-as.png" />
 
     <!--javascript-->
-    <script defer src="javascript/script.js"></script>
+    <script defer src="javascript/index.js"></script>
     <!--css-->
     <link rel="stylesheet" href="css/p-accueil.css" />
     <link rel="stylesheet" href="css/base.css" />
