--- a/html/equipes.html
+++ b/html/equipes.html
@@ -97,27 +97,46 @@
             équipes pour plus de 345 joueurs et 53 membres de staff.
           </p>
         </article>
-        <div id="jeunes">
-          <h1 class="titre" id="jeunes">Les <span>jeunes</span></h1>
-          <p>
-            Les jeunes Le coeur du projet de l'AS Montigny, les jeunes sont l'avenir du club. C'est sur eux que le club mise
-            pour assurer le futur!
-          </p>
-        </div>
-        <div id="seniors">
-          <h1 class="titre" id="seniors">Les <span>séniors</span></h1>
 
-          <p>
-            Les seniors Une équipe première doit motiver les jeunes par l’exemple, créer une fierté communautaire, renforcer
-            les liens sociaux, développer des compétences et attirer des talents et des sponsors. Elle doit montrer la voie !
-          </p>
+        <div id="jeunes">
+          <div class="text-box">
+            <h1 class="titre" id="jeunes">Les <span>jeunes</span></h1>
+            <p>
+              Les jeunes Le coeur du projet de l'AS Montigny, les jeunes sont l'avenir du club. C'est sur eux que le club
+              mise pour assurer le futur!
+            </p>
+          </div>
+          <div class="image-box">
+            <img src="../img/kids7.jpg" alt="kid-image" />
+          </div>
         </div>
-        <div id="veterans">
-          <h1 class="titre" id="veterans">Les <span>Vétérans</span></h1>
-          <p>
-            Les vétérans Une équipe vétérans offre aux plus de 35 ans une occasion de s'amuser, de rester en forme et de
-            partager leur expérience avec les plus jeunes.
-          </p>
+
+        <div id="seniors">
+          <div class="image-box">
+            <img src="../img/team-senior4.jpg" alt="" />
+          </div>
+
+          <div class="text-box">
+            <h1 class="titre" id="seniors">Les <span>séniors</span></h1>
+            <p>
+              Les seniors Une équipe première doit motiver les jeunes par l’exemple, créer une fierté communautaire,
+              renforcer les liens sociaux, développer des compétences et attirer des talents et des sponsors. Elle doit
+              montrer la voie !
+            </p>
+          </div>
+        </div>
+
+        <div id="veteran">
+          <div class="text-box">
+            <h1 class="titre" id="veteran">Les <span>Vétérans</span></h1>
+            <p>
+              Les vétérans Une équipe vétérans offre aux plus de 35 ans une occasion de s'amuser, de rester en forme et de
+              partager leur expérience avec les plus jeunes.
+            </p>
+          </div>
+          <div class="image-box">
+            <img src="../img/team-senior3.jpg" alt="" />
+          </div>
         </div>
       </section>
     </main>
