V1 of : home,equipes,events,cotisation,planning ---> OK

--- a/html/equipes.html
+++ b/html/equipes.html
@@ -89,15 +89,32 @@
       </nav>
     </header>
     <main>
-      <section id="allteam">
-        <article>
-          <p>
-            Nos équipes Lors de la saison 2023-24, l'AS Montigny a aligné les équipes suivantes: U6 U7 U8 a + U9 a + b + c
-            U10 a + b U11 a + b + c U12 filles + garçons U13 U14 U15 U16 a + b U19 Seniors a + b Vétérans (en amical) 23
-            équipes pour plus de 345 joueurs et 53 membres de staff.
-          </p>
-        </article>
+      <article>
+        <img src="../img/visual3v2.png" alt="Background" class="background-image" />
+        <h1 class="titre">Présentation des effectifs de l'AS Montigny pour <span>2023-24</span></h1>
+        <div class="content-box">
+          <p class="inter-bold">Lors de la saison 2023-24, l'AS Montigny a aligné les équipes suivantes :</p>
+          <ul class="liste-equipes">
+            <li>U6</li>
+            <li>U7</li>
+            <li>U8</li>
+            <li>U9 a, b, c</li>
+            <li>U10 a, b</li>
+            <li>U11 a, b, c</li>
+            <li>U12 filles et garçons</li>
+            <li>U13</li>
+            <li>U14</li>
+            <li>U15</li>
+            <li>U16 a, b</li>
+            <li>U19</li>
+            <li>Seniors a, b</li>
+            <li>Vétérans (en amical)</li>
+          </ul>
+          <p class="inter-bold">Au total, 23 équipes pour plus de 345 joueurs et 53 membres de staff.</p>
+        </div>
+      </article>
 
+      <section id="allteam">
         <div id="jeunes">
           <div class="text-box">
             <h1 class="titre" id="jeunes">Les <span>jeunes</span></h1>
@@ -116,7 +133,7 @@
             <img src="../img/team-senior4.jpg" alt="" />
           </div>
 
-          <div class="text-box">
+          <div class="text-box" style="margin-right: 0; margin-left: 10vh">
             <h1 class="titre" id="seniors">Les <span>séniors</span></h1>
             <p>
               Les seniors Une équipe première doit motiver les jeunes par l’exemple, créer une fierté communautaire,
