--- a/html/planning.html
+++ b/html/planning.html
@@ -91,14 +91,14 @@
 
     <main>
       <section id="planning">
-        <h1>Planning saison 2023/2024</h1>
+        <h1 class="titre">Planning saison <span>2023/2024</span></h1>
         <div class="img-container">
           <img src="../img/planning.jpg" alt="Planning" />
         </div>
       </section>
 
       <section id="organigramme">
-        <h1>Organigramme 2023/2024</h1>
+        <h1 class="titre"><span>Organigramme</span> du club</h1>
         <p class="inter-light">
           L'AS Montigny a toujours voulu se démarquer par son bonne organisation. Nous nous mettons un point d'honneur à nous
           organiser et à mettre à jour un organigramme au moins une fois par an. Voici celui en cours pour la saison 2024/25
@@ -120,7 +120,7 @@
             <ul class="carousel">
               <li class="card">
                 <div class="img">
-                  <img src="../img/mika1.jpg" alt="img" draggable="false" />
+                  <img src="../img/old5.jpg" alt="img" draggable="false" />
                 </div>
                 <h2>Mika Siciliano</h2>
                 <span>Coach u12</span>
