--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body id="index-page">
     <!----HEADER---->
     <header>
       <!--socials-->
@@ -104,7 +104,7 @@
           <img src="img/ResNonverba2white.svg" class="pattern-overlay" />
           <div class="text-box">
             <div class="content">
-              <h1>Plus qu'un club, une famille</h1>
+              <h1 class="titre">Plus qu'un club, une <span>famille</span></h1>
               <p class="inter-light">
                 Rejoignez notre grande famille et devenez un Griffon dès aujourd’hui ! Ensemble, nous bâtissons bien plus
                 qu’un simple club : un lieu d’échange, de partage et de passion où chaque membre trouve sa place. Venez vivre
@@ -139,7 +139,7 @@
         <div id="wrap2">
           <div class="text-box2">
             <div class="content">
-              <h1>Un nouveau monde, plus de technologies.</h1>
+              <h1 class="titre" style="font-size: 4vh">Un nouveau monde, plus de <span>technologies</span>.</h1>
               <p class="inter-light">
                 Le club investi en la technologie pour optimiser son fonctionnement. Depuis 3 ans, le logiciel
                 <b>Pro Soccer Data</b>
@@ -161,7 +161,9 @@
         <!-- Section des matchs précédents -->
 
         <div id="previous">
-          <h2>Dernier match</h2>
+          <div class="titre-box">
+            <h2>Dernier match</h2>
+          </div>
           <div class="titre-match">
             <h3>U11-R17 2EME TOUR</h3>
           </div>
@@ -185,9 +187,11 @@
 
         <!-- Section des matchs à venir -->
         <div id="next">
-          <h2>Prochain match</h2>
+          <div class="titre-box">
+            <h2>Prochain match</h2>
+          </div>
           <div class="titre-match">
-            <h3>Matchs à venir</h3>
+            <h3>U11-R17 2EME TOUR</h3>
           </div>
           <div class="match-box">
             <div class="match-summary">
@@ -207,7 +211,9 @@
         </div>
 
         <div id="classement">
-          <h2>Classement</h2>
+          <div class="titre-box">
+            <h2>Classement</h2>
+          </div>
           <div class="titre-match">
             <h3>Football : Hainaut - 4 Prov.G</h3>
           </div>
